syntax = "proto3";

option java_multiple_files = true;
option java_package = "sep3.project.protobuf";

service Post{
	rpc savePost(SaveRequestPost) returns (SaveResponsePost);
}

message PostMessage{}
message SaveRequestPost {}

message SaveResponsePost {}
